k8s/api-eq.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-earthquakes
  labels:
    name: api-earthquakes
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: api-earthquakes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-earthquakes
  labels:
    app: api-earthquakes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-earthquakes
  template:
    metadata:
      labels:
        app: api-earthquakes
    spec:
      containers:
      - env:
        - name: MONGODB_URI
          valueFrom:
            secretKeyRef:
              name: cosmos-db-secret
              key: uri
        image: chzbrgr71/api-earthquakes
        imagePullPolicy: Always
        name: api-earthquakes
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
