k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-earthquakes
  labels:
    name: api-earthquakes
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: api-earthquakes
---
apiVersion: v1
kind: Service
metadata:
  name: api-location
  labels:
    name: api-location
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: api-location
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-earthquakes
  labels:
    app: api-earthquakes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-earthquakes
  template:
    metadata:
      labels:
        app: api-earthquakes
    spec:
      containers:
      - env:
        - name: LOC_API
          value: "api-location.quake.svc.cluster.local:8000"
        - name: MONGODB_URI
          valueFrom:
            secretKeyRef:
              name: cosmos-db-secret
              key: uri
        image: chzbrgr71/api-earthquakes:v1
        imagePullPolicy: Always
        name: api-earthquakes
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-location
  labels:
    app: api-location
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-location
  template:
    metadata:
      labels:
        app: api-location
    spec:
      containers:
        - image: chzbrgr71/api-location:v1
          imagePullPolicy: Always
          name: api-location
          ports:
          - containerPort: 8000
            protocol: TCP
      restartPolicy: Always
