k8s/earthquakes.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-earthquakes
  labels:
    name: api-earthquakes
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8001
    targetPort: 8001
  selector:
    app: api-earthquakes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-earthquakes
  labels:
    app: api-earthquakes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-earthquakes
  template:
    metadata:
      labels:
        app: api-earthquakes
    spec:
      containers:
      - env:
        - name: LOC_API
          value: "api-location.quake.svc.cluster.local:8000"
        - name: MONGODB_URI
          valueFrom:
            secretKeyRef:
              name: cosmos-db-secret
              key: uri
        image: chzbrgr71/api-earthquakes:v2
        imagePullPolicy: Always
        name: api-earthquakes
        ports:
        - containerPort: 8001
          protocol: TCP
      restartPolicy: Always
