k8s/flights.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-flights
  labels:
    name: api-flights
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8004
    targetPort: 8004
  selector:
    app: api-flights
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-flights
  labels:
    app: api-flights
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-flights
  template:
    metadata:
      labels:
        app: api-flights
    spec:
      containers:
      - env:
        - name: LOC_API
          value: "api-location.quake.svc.cluster.local:8000"
        - name: MONGODB_URI
          valueFrom:
            secretKeyRef:
              name: cosmos-db-secret
              key: uri
        image: chzbrgr71/api-flights:v1
        imagePullPolicy: Always
        name: api-flights
        ports:
        - containerPort: 8004
          protocol: TCP
      restartPolicy: Always
