k8s/fracking.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-fracking
  labels:
    name: api-fracking
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8002
    targetPort: 8002
  selector:
    app: api-fracking
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-fracking
  labels:
    app: api-fracking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-fracking
  template:
    metadata:
      labels:
        app: api-fracking
    spec:
      containers:
      - env:
        - name: LOC_API
          value: "api-location.quake.svc.cluster.local:8000"
        - name: MONGODB_URI
          valueFrom:
            secretKeyRef:
              name: cosmos-db-secret
              key: uri
        image: chzbrgr71/api-fracking:v2
        imagePullPolicy: Always
        name: api-fracking
        ports:
        - containerPort: 8002
          protocol: TCP
      restartPolicy: Always
