k8s/loc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-location
  labels:
    name: api-location
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8000
    targetPort: 8000
  selector:
    app: api-location
