k8s/weather.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-weather
  labels:
    name: api-weather
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8003
    targetPort: 8003
  selector:
    app: api-weather
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-weather
  labels:
    app: api-weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-weather
  template:
    metadata:
      labels:
        app: api-weather
    spec:
      containers:
      - env:
        - name: LOC_API
          value: "api-location.quake.svc.cluster.local:8000"
        - name: MONGODB_URI
          valueFrom:
            secretKeyRef:
              name: cosmos-db-secret
              key: uri
        image: chzbrgr71/api-weather:v2
        imagePullPolicy: Always
        name: api-weather
        ports:
        - containerPort: 8003
          protocol: TCP
      restartPolicy: Always
