k8s/routerule-new.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-routes
spec:
  hosts:
    - api-location
  http:
  - route:
    - destination:
        host: api-location
        subset: prod
      weight: 50
    - destination:
        host: api-location
        subset: canary
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: api-location
spec:
  host: api-location
  subsets:
  - name: prod
    labels:
      version: prod
  - name: canary
    labels:
      version: canary
